@@ -136,6 +136,7 @@ This menu was using Sprotty export, which has been replaced by ReactFlow by defa
 The only way to export diagram as SVG image is to use the ReactFlow toolbar located at the top left of each diagram.
 - https://github.com/eclipse-sirius/sirius-web/issues/2706[#2706] [diagram] Fix an issue where node children were not correctly positioned.
 - https://github.com/eclipse-sirius/sirius-web/issues/2687[#2687] [diagram] Fix an issue where ConnectionHandles where rerendering too much
+- https://github.com/eclipse-sirius/sirius-web/issues/2698[#2698] [diagram] Fix an issue that prevents _imageNode_ to be resizable.
 
 === New Features
 
